--- a/informes.html
+++ b/informes.html
@@ -9,6 +9,7 @@
     <!-- Estilos CSS -->
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/informes.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
     <script src="pages/informes.js" defer></script>
     <script src="pages/common.js" defer></script> 
 </head>
